fix: some spaces and alignaments

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,10 @@ button {
   border-radius: 90px;
   accent-color: #c1c1c1;
   border-width: 0;
+  outline: none;
+  border: none;
 }
+
 .minutage:hover {
   accent-color: #1db954;
 }
@@ -86,7 +89,7 @@ button {
   border-radius: 100%;
   opacity: 0;
 }
-.minutage:hover:-webkit-slider-thumb {
+.minutage:hover::-webkit-slider-thumb {
   opacity: 1;
 }
 
@@ -109,8 +112,11 @@ header {
   color: var(--secondaryColor);
   overflow-y: auto;
 }
+
 .logo {
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
+  position: relative;
+  left: 1px;
 }
 
 .logo img:last-of-type {
@@ -330,14 +336,14 @@ footer img {
   max-height: 100%;
   display: flex;
   padding: 0.9375rem 0.5rem;
-  gap: 0.6375rem;
+  gap: 0.5375rem;
   color: #878787;
-  font-size: 0.775rem;
+  font-size: 0.675rem;
   align-items: center;
 }
 .info h5 {
   color: white;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .info > div:first-of-type {
@@ -424,7 +430,7 @@ footer img {
   cursor: pointer;
 }
 .volume > div:first-of-type {
-  width: 35%;
+  width: 50%;
   font-size: 0.6rem;
 }
 .volume > div:last-of-type {
@@ -568,27 +574,6 @@ footer img {
   }
 }
 @media screen and (min-width: 64rem) {
-  /* categories */
-  .categories li {
-    width: auto;
-  }
-  .info {
-    width: 25%;
-  }
-  .info > div:first-of-type img {
-    max-width: calc(6.35rem - 2.3rem);
-  }
-  .command {
-    font-size: 1.2rem;
-  }
-  .command > div:first-of-type {
-    position: relative;
-    top: 0.4rem;
-    gap: 0.9rem;
-  }
-  .command > div > div:nth-of-type(2) i {
-    font-size: 2rem;
-  }
   /* selection */
   .row:first-of-type {
     justify-content: space-between;
@@ -599,6 +584,26 @@ footer img {
   .card {
     width: calc(100% / 6 - 00.625rem);
     font-size: 0.875rem;
+  }
+
+  /* categories */
+  .categories li {
+    width: auto;
+  }
+  .info {
+    width: 25%;
+  }
+  .info > div:first-of-type img {
+    max-width: calc(6.35rem - 2.3rem);
+  }
+
+  .command > div:first-of-type {
+    position: relative;
+    top: 0.4rem;
+    gap: 0.9rem;
+  }
+  .command > div > div:nth-of-type(2) i {
+    font-size: 2rem;
   }
 }
 
